Modify how we find building models

--- a/buildstock_fetch/utils/buildstock_releases.json
+++ b/buildstock_fetch/utils/buildstock_releases.json
@@ -9,10 +9,10 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_15min"
+      "load_curve_monthly"
     ]
   },
   "com_2021_tmy3_1": {
@@ -25,10 +25,10 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_15min"
+      "load_curve_monthly"
     ]
   },
   "res_2021_amy2018_1": {
@@ -41,10 +41,10 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_15min"
+      "load_curve_monthly"
     ]
   },
   "res_2021_tmy3_1": {
@@ -57,10 +57,10 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_15min"
+      "load_curve_monthly"
     ]
   },
   "res_2022_amy2012_1.1": {
@@ -82,14 +82,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2022_amy2012_1": {
@@ -111,14 +111,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -140,14 +140,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2022_amy2018_1": {
@@ -169,14 +169,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -198,14 +198,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2022_tmy3_1": {
@@ -227,14 +227,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_daily",
-      "load_curve_hourly",
-      "load_curve_monthly",
       "schedule",
-      "metadata",
-      "load_curve_annual",
+      "load_curve_daily",
       "load_curve_15min",
-      "hpxml"
+      "hpxml",
+      "load_curve_hourly",
+      "metadata",
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "com_2023_amy2018_1": {
@@ -257,11 +257,11 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "com_2023_amy2018_2": {
@@ -292,11 +292,11 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "com_2024_amy2018_1": {
@@ -340,11 +340,11 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "com_2024_amy2018_2": {
@@ -396,11 +396,11 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "res_2024_amy2018_2": {
@@ -428,12 +428,14 @@
       "16"
     ],
     "available_data": [
-      "load_curve_daily",
+      "hpxml",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
+      "load_curve_daily",
       "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule"
     ]
   },
   "res_2024_tmy3_1": {
@@ -442,10 +444,7 @@
     "weather": "tmy3",
     "release_number": "1",
     "upgrade_ids": [],
-    "available_data": [
-      "metadata",
-      "load_curve_annual"
-    ]
+    "available_data": []
   },
   "res_2024_tmy3_2": {
     "release_year": "2024",
@@ -472,12 +471,14 @@
       "16"
     ],
     "available_data": [
-      "load_curve_daily",
+      "hpxml",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
+      "load_curve_daily",
       "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule"
     ]
   },
   "com_2025_amy2018_1": {
@@ -547,11 +548,11 @@
     ],
     "available_data": [
       "load_curve_daily",
+      "load_curve_15min",
       "load_curve_hourly",
-      "load_curve_monthly",
       "metadata",
-      "load_curve_annual",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "load_curve_annual"
     ]
   },
   "com_2025_amy2018_2": {
@@ -561,7 +562,11 @@
     "release_number": "2",
     "upgrade_ids": [],
     "available_data": [
+      "load_curve_daily",
+      "load_curve_15min",
+      "load_curve_hourly",
       "metadata",
+      "load_curve_monthly",
       "load_curve_annual"
     ]
   }
