update toml and dev install

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include buildstock_fetch/utils *.json
-recursive-include buildstock_fetch/utils/building_data *
+recursive-include buildstock_fetch/data *.json
+recursive-include buildstock_fetch/data/building_data *
