--- a/buildstock_fetch/data/buildstock_releases.json
+++ b/buildstock_fetch/data/buildstock_releases.json
@@ -9,10 +9,11 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
-      "load_curve_monthly"
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "com_2021_tmy3_1": {
@@ -25,10 +26,11 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
-      "load_curve_monthly"
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "res_2021_amy2018_1": {
@@ -41,10 +43,11 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
-      "load_curve_monthly"
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "res_2021_tmy3_1": {
@@ -57,10 +60,11 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
-      "load_curve_monthly"
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "res_2022_amy2012_1.1": {
@@ -82,14 +86,15 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "res_2022_amy2012_1": {
@@ -111,14 +116,15 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -140,14 +146,14 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "res_2022_amy2018_1": {
@@ -169,14 +175,15 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -198,14 +205,15 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "res_2022_tmy3_1": {
@@ -227,14 +235,15 @@
       "10"
     ],
     "available_data": [
-      "schedule",
       "load_curve_daily",
-      "load_curve_15min",
-      "hpxml",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly",
+      "hpxml",
+      "schedule"
     ]
   },
   "com_2023_amy2018_1": {
@@ -257,11 +266,12 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "com_2023_amy2018_2": {
@@ -292,11 +302,12 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "com_2024_amy2018_1": {
@@ -340,11 +351,12 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "com_2024_amy2018_2": {
@@ -396,11 +408,12 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "res_2024_amy2018_2": {
@@ -428,13 +441,14 @@
       "16"
     ],
     "available_data": [
-      "hpxml",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_daily",
-      "load_curve_annual",
       "load_curve_monthly",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "weather",
+      "load_curve_hourly",
+      "hpxml",
       "schedule"
     ]
   },
@@ -471,13 +485,14 @@
       "16"
     ],
     "available_data": [
-      "hpxml",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_daily",
-      "load_curve_annual",
       "load_curve_monthly",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "weather",
+      "load_curve_hourly",
+      "hpxml",
       "schedule"
     ]
   },
@@ -548,11 +563,12 @@
     ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   },
   "com_2025_amy2018_2": {
@@ -560,14 +576,78 @@
     "res_com": "comstock",
     "weather": "amy2018",
     "release_number": "2",
-    "upgrade_ids": [],
+    "upgrade_ids": [
+      "00",
+      "01",
+      "02",
+      "03",
+      "04",
+      "05",
+      "06",
+      "07",
+      "08",
+      "09",
+      "10",
+      "11",
+      "12",
+      "13",
+      "14",
+      "15",
+      "16",
+      "17",
+      "18",
+      "19",
+      "20",
+      "21",
+      "22",
+      "23",
+      "24",
+      "25",
+      "26",
+      "27",
+      "28",
+      "29",
+      "30",
+      "31",
+      "32",
+      "33",
+      "34",
+      "35",
+      "36",
+      "37",
+      "38",
+      "39",
+      "40",
+      "41",
+      "42",
+      "43",
+      "44",
+      "45",
+      "46",
+      "47",
+      "48",
+      "49",
+      "50",
+      "51",
+      "52",
+      "53",
+      "54",
+      "55",
+      "56",
+      "57",
+      "58",
+      "59",
+      "60",
+      "61"
+    ],
     "available_data": [
       "load_curve_daily",
-      "load_curve_15min",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
-      "load_curve_annual"
+      "metadata",
+      "load_curve_annual",
+      "weather",
+      "load_curve_15min",
+      "load_curve_hourly"
     ]
   }
 }
