--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ dev-utils = [
     "pyarrow>=14.0.1",
     "numpy>=1.26.4",
     "scikit-learn>=1.6.1",
+    "awscli>=1.32.0",
 ]
 
 # All development dependencies (convenience group)
