Fix url issue for res 2024 amy2018 and add AZ weather map

--- a/buildstock_fetch/data/buildstock_releases.json
+++ b/buildstock_fetch/data/buildstock_releases.json
@@ -453,6 +453,9 @@
       "load_curve_hourly",
       "hpxml",
       "schedule"
+    ],
+    "weather_map_available_states": [
+      "AZ"
     ]
   },
   "res_2024_tmy3_1": {
