--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,6 +157,13 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
+"tests/test_release.py" = [
+    "S603",  # subprocess call: check for execution of untrusted input
+    "S607",  # Starting a process with a partial executable path
+    "F401",  # imported but unused
+    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
+    "TRY003",  # Avoid specifying long messages outside the exception class
+]
 
 [tool.ruff.format]
 preview = true
