--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "tomli>=2.0.0",
     "boto3>=1.33.0",
     "botocore>=1.33.0",
+    "pyarrow>=14.0.1",
 ]
 
 [project.urls]
@@ -64,7 +65,6 @@ lint = [
 dev-utils = [
     "boto3>=1.33.0",
     "botocore>=1.33.0",
-    "pyarrow>=14.0.1",
     "numpy>=1.26.4",
     "scikit-learn>=1.6.1",
     "awscli>=1.32.0",
@@ -106,6 +106,10 @@ check_untyped_defs = true
 warn_return_any = true
 warn_unused_ignores = true
 show_error_codes = true
+
+[[tool.mypy.overrides]]
+module = ["pyarrow.*"]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
