Skip existing buildstock releases in the json file

--- a/buildstock_fetch/data/buildstock_releases.json
+++ b/buildstock_fetch/data/buildstock_releases.json
@@ -8,10 +8,10 @@
       "0"
     ],
     "available_data": [
-      "load_curve_hourly",
       "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -25,10 +25,10 @@
       "0"
     ],
     "available_data": [
-      "load_curve_hourly",
       "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -42,10 +42,10 @@
       "0"
     ],
     "available_data": [
-      "load_curve_hourly",
       "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -59,10 +59,10 @@
       "0"
     ],
     "available_data": [
-      "load_curve_hourly",
       "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -86,15 +86,15 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
     ]
   },
   "res_2022_amy2012_1": {
@@ -116,15 +116,18 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
+    ],
+    "weather_map_available_states": [
+      "NY"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -146,14 +149,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "metadata"
     ]
   },
   "res_2022_amy2018_1": {
@@ -175,15 +178,15 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -205,15 +208,15 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
     ]
   },
   "res_2022_tmy3_1": {
@@ -235,15 +238,15 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
-      "metadata",
-      "hpxml"
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
     ]
   },
   "com_2023_amy2018_1": {
@@ -265,11 +268,11 @@
       "10"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -301,11 +304,11 @@
       "18"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -350,11 +353,11 @@
       "32"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -407,11 +410,11 @@
       "39"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -441,15 +444,16 @@
       "16"
     ],
     "available_data": [
+      "hpxml",
       "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
-      "weather",
-      "schedule",
       "metadata",
-      "hpxml",
+      "schedule",
+      "load_curve_annual",
+      "weather",
+      "load_curve_monthly",
+      "trip_schedules",
       "trip_schedules"
     ],
     "trip_schedule_states": [
@@ -489,34 +493,20 @@
       "16"
     ],
     "available_data": [
+      "hpxml",
       "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
-      "weather",
-      "schedule",
       "metadata",
-      "hpxml",
+      "schedule",
+      "load_curve_annual",
+      "weather",
+      "load_curve_monthly",
+      "trip_schedules",
       "trip_schedules"
     ],
     "trip_schedule_states": [
       "NY"
-    ]
-  },
-  "com_2025_amy2012_2": {
-    "release_year": "2025",
-    "res_com": "comstock",
-    "weather": "amy2012",
-    "release_number": "2",
-    "upgrade_ids": [],
-    "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "metadata"
     ]
   },
   "com_2025_amy2018_1": {
@@ -585,11 +575,11 @@
       "57"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -664,11 +654,11 @@
       "61"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
       "load_curve_annual",
+      "load_curve_15min",
       "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
       "weather",
       "metadata"
     ]
@@ -710,15 +700,30 @@
       "28"
     ],
     "available_data": [
-      "load_curve_hourly",
-      "load_curve_15min",
-      "load_curve_monthly",
-      "load_curve_annual",
-      "load_curve_daily",
-      "weather",
       "schedule",
+      "load_curve_annual",
+      "hpxml",
+      "load_curve_15min",
+      "load_curve_daily",
+      "load_curve_hourly",
+      "load_curve_monthly",
+      "weather",
+      "metadata"
+    ]
+  },
+  "com_2025_amy2012_2": {
+    "release_year": "2025",
+    "res_com": "comstock",
+    "weather": "amy2012",
+    "release_number": "2",
+    "upgrade_ids": [],
+    "available_data": [
+      "load_curve_annual",
+      "load_curve_hourly",
       "metadata",
-      "hpxml"
+      "load_curve_monthly",
+      "load_curve_15min",
+      "load_curve_daily"
     ]
   }
 }
