--- a/buildstock_fetch/data/buildstock_releases.json
+++ b/buildstock_fetch/data/buildstock_releases.json
@@ -454,6 +454,10 @@
       "weather",
       "load_curve_monthly",
       "trip_schedules",
+      "trip_schedules",
+      "trip_schedules",
+      "trip_schedules",
+      "trip_schedules",
       "trip_schedules"
     ],
     "trip_schedule_states": [
@@ -502,6 +506,10 @@
       "load_curve_annual",
       "weather",
       "load_curve_monthly",
+      "trip_schedules",
+      "trip_schedules",
+      "trip_schedules",
+      "trip_schedules",
       "trip_schedules",
       "trip_schedules"
     ],
@@ -716,14 +724,77 @@
     "res_com": "comstock",
     "weather": "amy2012",
     "release_number": "2",
-    "upgrade_ids": [],
+    "upgrade_ids": [
+      "0",
+      "1",
+      "2",
+      "3",
+      "4",
+      "5",
+      "6",
+      "7",
+      "8",
+      "9",
+      "10",
+      "11",
+      "12",
+      "13",
+      "14",
+      "15",
+      "16",
+      "17",
+      "18",
+      "19",
+      "20",
+      "21",
+      "22",
+      "23",
+      "24",
+      "25",
+      "26",
+      "27",
+      "28",
+      "29",
+      "30",
+      "31",
+      "32",
+      "33",
+      "34",
+      "35",
+      "36",
+      "37",
+      "38",
+      "39",
+      "40",
+      "41",
+      "42",
+      "43",
+      "44",
+      "45",
+      "46",
+      "47",
+      "48",
+      "49",
+      "50",
+      "51",
+      "52",
+      "53",
+      "54",
+      "55",
+      "56",
+      "57",
+      "58",
+      "59",
+      "60",
+      "61"
+    ],
     "available_data": [
-      "load_curve_annual",
-      "load_curve_hourly",
-      "metadata",
       "load_curve_monthly",
+      "metadata",
+      "load_curve_daily",
       "load_curve_15min",
-      "load_curve_daily"
+      "load_curve_annual",
+      "load_curve_hourly"
     ]
   }
 }
