Extract BuildingID.get_building_data_url

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ show_error_codes = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+pythonpath = ["."]
 
 [tool.ruff]
 target-version = "py39"
