Modify tests to reflect new metadata table

--- a/buildstock_fetch/data/buildstock_releases.json
+++ b/buildstock_fetch/data/buildstock_releases.json
@@ -125,6 +125,9 @@
       "load_curve_annual",
       "metadata",
       "hpxml"
+    ],
+    "weather_map_available_states": [
+      "NY"
     ]
   },
   "res_2022_amy2018_1.1": {
