--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,6 @@ packages = ["buildstock_fetch"]
   "data/buildstock_upgrades_lookup.json",
 ]
 
-
 [tool.mypy]
 files = ["buildstock_fetch"]
 disallow_untyped_defs = true
@@ -170,6 +169,10 @@ preview = true
 [tool.deptry]
 # Exclude directories that shouldn't be analyzed
 exclude = ["utils", "\\.venv"]
+
+[tool.pyright]
+exclude = [".venv", "tests"]
+venv = ".venv"
 
 # Ignore dev-only dependencies that are not used in main package code
 per_rule_ignores.DEP002 = [
