--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,9 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-json
+        exclude: ^.devcontainer/devcontainer.json
       - id: pretty-format-json
+        exclude: ^.devcontainer/devcontainer.json
         args: [--autofix, --no-sort-keys]
       - id: check-toml
       - id: check-added-large-files
